add large media queries, mid media queries and other minor layout fixes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="header">
-        <div class="container head row">
+        <div class="container header--menu row">
             <div class="header--logo-div">
                 <img src="img/crl-logo.svg" alt="CRL" class="header__logo">
             </div>
@@ -30,7 +30,7 @@
     </header>
 
     <section class="hero">
-        <div class="container row">
+        <div class="container lg-hero row">
             <div class="hero__title-div">
                 <h1 class="hero__title bold">Responsive layouts <span class="contrast-color">don’t have to be a struggle</span></h1>
             </div>
@@ -45,9 +45,9 @@
     </section>
 
     <section class="cards">
-        <div class="container row mid-col">
+        <div class="container mid-cards row">
             <div class="card__items col">
-                <h2 class="card__title contrast-color bold">Mobile-first</h1>
+                <h2 class="card__title contrast-color bold">Mobile-first</h2>
                 <p class="card__text">Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="card__items col">
-                <h2 class="card__title contrast-color bold">Efficient</h1>
+                <h2 class="card__title contrast-color bold">Efficient</h2>
                 <p class="card__text">Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut
@@ -65,7 +65,7 @@
                 </p>
             </div>
             <div class="card__items col">
-                <h2 class="card__title contrast-color bold">Done right</h1>
+                <h2 class="card__title contrast-color bold">Done right</h2>
                 <p class="card__text">Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut
@@ -123,7 +123,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container row">
+        <div class="container lg-footer row">
             <h1 class="footer__title bold">just scratching the surface</h1>
             <section class="footer__menu">
                 <div class="footer__about">
